--- a/css/main.css
+++ b/css/main.css
@@ -7,3 +7,55 @@
 body {
   background-color: #f8f9fa; /* 기본 배경색 */
 }
+
+.movies-container {
+  padding: 5%;
+  display: grid;
+  grid-template-columns: repeat(
+    auto-fill,
+    minmax(300px, 1fr)
+  ); /* 카드의 최소 크기를 200px로 하고, 화면 크기에 맞춰 여러 개 배치 */
+  gap: 20px; /* 카드들 사이에 여백 추가 */
+  padding: 20px; /* 컨테이너 내부 여백 */
+}
+
+.movie-card {
+  background-color: #fff;
+  border: 1px solid #ddd;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  overflow: hidden;
+  transition: transform 0.3s;
+
+  display: flex; /* 내부 요소들을 flexbox로 정렬 */
+  flex-direction: column; /* 세로 방향으로 정렬 */
+}
+
+.movie-card:hover {
+  transform: scale(1.05); /* 마우스 오버 시 확대 효과 */
+}
+
+.poster-image {
+  width: 100%; /* 카드 너비에 맞춤 */
+  height: 500px; /* 고정된 높이 설정 (원하는 높이로 조정) */
+  object-fit: cover; /* 비율을 유지하며 잘라내기 */
+  display: block; /* 블록 요소로 설정 */
+}
+
+.title,
+.overview,
+.vote-average {
+  padding: 10px;
+  margin: 0;
+}
+
+.overview {
+  font-size: 1rem;
+  padding: 10px;
+  display: -webkit-box; /* Flexbox를 사용하여 줄 수 제한 */
+  -webkit-box-orient: vertical; /* 수직 방향으로 정렬 */
+  -webkit-line-clamp: 2; /* 표시할 줄 수 설정 */
+  overflow: hidden; /* 넘치는 내용 숨기기 */
+  height: 3.2em; /* 높이를 2줄에 맞게 설정 (약 2줄 높이) */
+  margin-bottom: 10px;
+}
