--- a/css/main.css
+++ b/css/main.css
@@ -1,9 +1,19 @@
+@font-face {
+  font-family: "SUIT-Regular";
+  src: url("https://fastly.jsdelivr.net/gh/projectnoonnu/noonfonts_suit@1.0/SUIT-Regular.woff2")
+    format("woff2");
+  font-weight: normal;
+  font-style: normal;
+}
+
 * {
+  font-family: "SUIT-Regular";
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   scroll-behavior: smooth;
 }
+
 body {
   background-color: #f8f9fa; /* 기본 배경색 */
 }
@@ -70,7 +80,7 @@ body {
   -webkit-box-orient: vertical; /* 수직 방향으로 정렬 */
   -webkit-line-clamp: 2; /* 표시할 줄 수 설정 */
   overflow: hidden; /* 넘치는 내용 숨기기 */
-  height: 3.2em; /* 높이를 2줄에 맞게 설정 (약 2줄 높이) */
+  height: 3em; /* 높이를 2줄에 맞게 설정 (약 2줄 높이) */
   margin-bottom: 10px;
 }
 
