--- a/css/main.css
+++ b/css/main.css
@@ -113,13 +113,39 @@ body {
   align-items: center;
   justify-content: center;
   gap: 10px;
+  margin-bottom: 30px;
 }
 .pagination-container div {
   display: flex;
   align-items: center;
   gap: 10px;
 }
-.pagination-container div > button {
-  width: 20px;
-  height: 20px;
+
+.pagination-container button {
+  background-color: #f8f9fa;
+  border: 1px solid #eaecf0;
+  border-radius: 4px;
+  color: #3c4043;
+  cursor: pointer;
+  font-family: arial, sans-serif;
+  font-size: 14px;
+  height: 36px;
+  line-height: 27px;
+  min-width: 40px;
+  padding: 0 13px;
+  text-align: center;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  white-space: pre;
+}
+
+.pagination-container button:hover {
+  border: 1px solid #cdcecf;
+  box-shadow: rgba(0, 0, 0, 0.1) 0 1px 1px;
+  color: #202124;
+}
+
+.vote-average {
+  font-size: 14px;
 }
