--- a/css/main.css
+++ b/css/main.css
@@ -17,7 +17,34 @@
 body {
   background-color: #f8f9fa; /* 기본 배경색 */
 }
-
+/* 제목 스타일 */
+h1 {
+  text-align: center; /* 가운데 정렬 */
+  color: #333; /* 글자 색상 */
+} /* 폼 스타일 */
+#title-search-form {
+  display: flex; /* 플렉스 박스 사용 */
+  justify-content: center; /* 중앙 정렬 */
+  margin-bottom: 20px; /* 아래쪽 마진 */
+}
+#title-search-input {
+  width: 300px; /* 입력 필드 너비 */
+  padding: 10px; /* 패딩 추가 */
+  border: 1px solid #ccc; /* 테두리 설정 */
+  border-radius: 5px; /* 모서리 둥글게 */
+  font-size: 16px; /* 폰트 크기 */
+}
+#search-button {
+  padding: 10px 15px; /* 버튼 패딩 */
+  margin-left: 10px; /* 버튼과 입력 필드 간격 */
+  border: none; /* 테두리 제거 */
+  border-radius: 5px; /* 모서리 둥글게 */
+  background-color: #007bff; /* 버튼 배경 색상 */
+  color: white; /* 버튼 글자 색상 */
+  font-size: 16px; /* 버튼 폰트 크기 */
+  cursor: pointer; /* 커서 포인터로 변경 */
+  transition: background-color 0.3s; /* 배경 색상 전환 효과 */
+}
 #loading-icon {
   margin: auto;
   display: inline-block;
@@ -148,4 +175,27 @@ body {
 
 .vote-average {
   font-size: 14px;
+}
+
+.search-suggestions {
+  position: absolute; /* 입력 필드 바로 아래에 위치하도록 설정 */
+  width: 300px;
+  top: 90px;
+
+  background-color: white; /* 배경색 설정 */
+  border: 1px solid #ccc; /* 테두리 색상 설정 */
+  border-radius: 5px; /* 모서리 둥글게 설정 */
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1); /* 그림자 효과 추가 */
+  max-height: 200px; /* 최대 높이 설정 */
+  overflow-y: auto; /* 내용이 넘칠 경우 스크롤 가능 */
+  z-index: 1000; /* 다른 요소 위에 표시되도록 설정 */
+}
+
+.suggestion-item {
+  padding: 10px; /* 각 제안 항목의 패딩 */
+  cursor: pointer; /* 마우스 커서 변경 */
+}
+
+.suggestion-item:hover {
+  background-color: #f0f0f0; /* 마우스 오버 시 배경색 변경 */
 }
