--- a/css/main.css
+++ b/css/main.css
@@ -222,3 +222,34 @@ h1 {
   cursor: pointer;
   padding-right: 8px;
 }
+
+.modal {
+  display: none; /* 기본적으로 숨김 */
+  position: fixed; /* 화면에 고정 */
+  z-index: 1000; /* 다른 요소 위에 표시 */
+  left: 0;
+  top: 0;
+  width: 100%; /* 전체 너비 */
+  height: 100%; /* 전체 높이 */
+  background-color: rgba(0, 0, 0, 0.5); /* 반투명 배경 */
+}
+
+/* 모달 콘텐츠 스타일 */
+.modal-content {
+  background-color: #fff; /* 흰색 배경 */
+  margin: 5% auto; /* 세로 중앙 정렬 */
+  padding: 20px;
+  border: 1px solid #888; /* 테두리 */
+  width: 80%; /* 너비 */
+  height: 80vh;
+  max-width: 80vw; /* 최대 너비 */
+}
+
+/* 닫기 버튼 스타일 */
+.close-button {
+  color: #aaa; /* 회색 */
+  float: right; /* 오른쪽 정렬 */
+  font-size: 28px; /* 글자 크기 */
+  font-weight: bold; /* 두꺼운 글씨 */
+  cursor: pointer; /* 커서 포인터 */
+}
