--- a/css/main.css
+++ b/css/main.css
@@ -233,9 +233,16 @@ h1 {
   height: 100%; /* 전체 높이 */
   background-color: rgba(0, 0, 0, 0.5); /* 반투명 배경 */
 }
-
+.close-button {
+  position: absolute;
+  right: 15px;
+  top: 10px;
+}
 /* 모달 콘텐츠 스타일 */
 .modal-content {
+  position: relative;
+  display: flex;
+  flex-direction: row;
   background-color: #fff; /* 흰색 배경 */
   margin: 5% auto; /* 세로 중앙 정렬 */
   padding: 20px;
